# decam

./: CMakeLists.txt  README.md
dependencies/include/: CuEye.h  uEye.h  uEye_tools.cs  ueye_deprecated.h  version.h
dependencies/lib/x64_w_msc12/: uEye_api_64.lib
dependencies/lib/x86_w_msc12/: uEye_api.lib
sources/: CMakeLists.txt
sources/decam/: CMakeLists.txt  dueye.cpp  dueye.h  dueyeOpenCv.cpp
sources/destda/: CMakeLists.txt  destda.cpp
